# guiding-typed-lang

./: .buildinfo  README.md  _toc.yml  contextual_terminal.html  genindex.html  inherited_attributes.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  synthesized_attributes.html  takeaways.html  typed_calculus.html
_build/.doctrees/: contextual_terminal.doctree  environment.pickle  inherited_attributes.doctree  intro.doctree  synthesized_attributes.doctree  takeaways.doctree  typed_calculus.doctree
_build/html/: contextual_terminal.html  inherited_attributes.html  synthesized_attributes.html  takeaways.html
_build/html/_sources/: inherited_attributes.ipynb  synthesized_attributes.ipynb  typed_calculus.ipynb
_build/jupyter_execute/: contextual_terminal.ipynb  inherited_attributes.ipynb  synthesized_attributes.ipynb  typed_calculus.ipynb
_sources/: contextual_terminal.ipynb  inherited_attributes.ipynb  synthesized_attributes.ipynb  takeaways.md  typed_calculus.ipynb
docs/: _config.yml  contextual_terminal.ipynb  inherited_attributes.ipynb  intro.md  takeaways.md
docs/_build/.doctrees/: contextual_terminal.doctree  environment.pickle  inherited_attributes.doctree  intro.doctree  synthesized_attributes.doctree  takeaways.doctree  typed_calculus.doctree
docs/_build/html/: contextual_terminal.html  genindex.html  intro.html  search.html  searchindex.js
docs/_build/jupyter_execute/: contextual_terminal.ipynb  inherited_attributes.ipynb  synthesized_attributes.ipynb  (+1 more)
simple_types/: attribute_utils.py  type_inference.py
(+3 files in other folders)
