[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_types"
version = "0.1"
dependencies = [
    "attribute_lark @ git+https://github.com/educhesne/attribute_lark.git",
    "outlines @ git+https://github.com/educhesne/outlines.git@attributed_lark_compatibility",
    "transformers[sentencepiece]",
    "datasets",
    "accelerate",
    "torch",
    "logical-unification",
    "ipywidgets",
    "jupyter-book",
    "ghp-import",
]

[tool.setuptools]
packages = ["simple_types"]
